Fixing spacing around images

--- a/static/css/machlearn.css
+++ b/static/css/machlearn.css
@@ -1,6 +1,6 @@
 #elbow_curve {
     display: block;
-    height: 800px;
+    height: 381px;
     width: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -8,7 +8,7 @@
 }
 
 #Class_tables {
-    height: 800px;
+    height: 400px;
     width: 900px;
     margin-left: auto;
     margin-right: auto
