--- a/static/css/spillcharts.css
+++ b/static/css/spillcharts.css
@@ -11,14 +11,14 @@
 }
 
 #boxplot-img {
-    height: 800px;
+    height: 680px;
     width: 800px;
     margin-left: auto;
     margin-right: auto
 }
 
 #boxplot-year {
-    height: 800px;
+    height: 600px;
     width: 800px;
     margin-left: auto;
     margin-right: auto
